[gd_scene load_steps=12 format=3 uid="uid://dpydp8wbgw50b"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_4l0fm"]
[ext_resource type="Texture2D" uid="uid://dkkhjjjb63fo1" path="res://assets/background/rocks_2.png" id="1_o7p5t"]
[ext_resource type="PackedScene" uid="uid://csb88176jotoi" path="res://scenes/plane/plane.tscn" id="2_6cdao"]
[ext_resource type="PackedScene" uid="uid://dydadrfgyw8t6" path="res://scenes/scrolling_background/scrolling_background.tscn" id="2_vxaps"]
[ext_resource type="PackedScene" uid="uid://dt1g7ohesutfs" path="res://scenes/parallax_image/parallax_image.tscn" id="2_x601e"]
[ext_resource type="PackedScene" uid="uid://dhd6nm7ty4vme" path="res://scenes/barrier/barrier.tscn" id="3_0hsyy"]
[ext_resource type="Texture2D" uid="uid://jw725ghjjd0s" path="res://assets/background/sky.png" id="3_x1ji7"]
[ext_resource type="Texture2D" uid="uid://hmcjcpx064td" path="res://assets/background/clouds_2.png" id="4_fb56r"]
[ext_resource type="Texture2D" uid="uid://bbsunf2v71tx" path="res://assets/background/rocks_1.png" id="5_cuxdb"]
[ext_resource type="PackedScene" uid="uid://dk4jkum1wy11w" path="res://scenes/game_over_ui/game_over_ui.tscn" id="5_s3bg5"]
[ext_resource type="PackedScene" uid="uid://bhhab4rj1sijt" path="res://scenes/hud/hud.tscn" id="6_tde2s"]

[node name="Game" type="Node2D"]
script = ExtResource("1_4l0fm")

[node name="ParallaxBackground" type="Node2D" parent="."]
position = Vector2(0, 427)

[node name="ParallaxImage" parent="ParallaxBackground" instance=ExtResource("2_x601e")]
scroll_scale = Vector2(0, 0)
texture = ExtResource("3_x1ji7")

[node name="ParallaxImage2" parent="ParallaxBackground" instance=ExtResource("2_x601e")]
scroll_scale = Vector2(0.25, 0.25)
texture = ExtResource("4_fb56r")

[node name="ParallaxImage3" parent="ParallaxBackground" instance=ExtResource("2_x601e")]
scroll_scale = Vector2(0.5, 0.5)
texture = ExtResource("5_cuxdb")

[node name="ParallaxImage4" parent="ParallaxBackground" instance=ExtResource("2_x601e")]
scroll_scale = Vector2(0.75, 0.75)
texture = ExtResource("1_o7p5t")

[node name="ScrollingBackground" parent="." instance=ExtResource("2_vxaps")]
visible = false

[node name="Plane" parent="." instance=ExtResource("2_6cdao")]
position = Vector2(58, 372)

[node name="Cieling" parent="." instance=ExtResource("3_0hsyy")]
position = Vector2(0, -13)

[node name="Floor" parent="." instance=ExtResource("3_0hsyy")]
position = Vector2(0, 863)

[node name="SpawnUpperLimit" type="Marker2D" parent="."]
position = Vector2(530, 340)

[node name="SpawnLowerLimit" type="Marker2D" parent="."]
position = Vector2(530, 544)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PipesContainer" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverUI" parent="CanvasLayer" instance=ExtResource("5_s3bg5")]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("6_tde2s")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
